# novahack

./: CMakeLists.txt  about.md  mod.json
src/: main.cpp
